# llm-practicals

./: .gitignore  README.md  environment.yml  pixi.toml  pyproject.toml
.github/workflows/: book.yml
content/: _config.yml  _toc.yml  api.ipynb  code.ipynb  embeddings.md  env_instructions.md  intro.md  next_token_prediction.md  practical-env.yml  prepare_rag_docs.py  prompts.md  rag.ipynb  setup.md  tokenizer_embeddings_python.ipynb  tokens.md
content/_build/.doctrees/: embeddings.doctree  environment.pickle  intro.doctree  next_token_prediction.doctree  prompts.doctree  tokens.doctree
content/_build/html/: .buildinfo  embeddings.html  genindex.html  intro.html  next_token_prediction.html  objects.inv  prompts.html  search.html  searchindex.js  tokens.html
content/_build/html/_sources/: prompts.md  tokens.md
content/notebooks/: 1_tokenizer.ipynb  2_word_embeddings.ipynb  3_sentence_embeddings.ipynb  4_llm_api.ipynb  api.ipynb  sentence_embeddings.ipynb  sentence_embeddings_old.ipynb  tokenizer.ipynb  tokenizer_embeddings_python.ipynb  word_embeddings.ipynb  x_sentence_embeddings_old.ipynb
