[project]
name = "llm-practicals-git"
version = "0.1.0"
description = "LLM practicals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.7.3",
    "gensim>=4.4.0",
    "groq>=0.33.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "jupyter-book>=1.0.4.post1",
]
